# SCBuilder

./: .gitignore  .pylintrc  Contributing.md  ContributorLicenseAgreement.txt  GitVersion.yml  License.txt  ReadMe.md  SCBuilder.code-workspace  Taskfile.yml  package.json
.ScriptCollection/: ProductInformation.xml
.ScriptCollection/OCIImages/: ImageDefinition.csv
.github/workflows/: buildpipeline.yml
.well-known/: security.txt
Other/Metrics/: RepositoryStatisticsPerCommit.csv
Other/Reference/: Reference.md
Other/Resources/Changelog/: v0.0.1.md  v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.2.4.md  v1.2.6.md
Other/Resources/Support/: InformationAboutSupportedVersions.csv
Other/Scripts/: PrepareBuildCodeunits.py
SCBuilder/: ReadMe.md  SCBuilder.codeunit.xml
SCBuilder/Other/: .gitignore  CommonTasks.py
SCBuilder/Other/QualityCheck/: Linting.py
SCBuilder/Other/Reference/: GenerateReference.py  docfx.json
SCBuilder/SCBuilder/: Dockerfile
SCGitHubRunner/: ReadMe.md  SCGitHubRunner.codeunit.xml
SCGitHubRunner/Other/: .gitignore  CommonTasks.py
SCGitHubRunner/Other/QualityCheck/: Linting.py
SCGitHubRunner/Other/Reference/: GenerateReference.py  docfx.json
SCGitHubRunner/SCGitHubRunner/: Dockerfile  entrypoint.sh
SCTaskRunnerMacOS/: ReadMe.md  SCTaskRunnerMacOS.codeunit.xml  pyproject.toml
SCTaskRunnerMacOS/Other/QualityCheck/: RunTestcases.py
SCTaskRunnerMacOS/Other/Reference/: GenerateReference.py  docfx.json
SCTaskRunnerMacOS/Other/Reference/ReferenceContent/: Hints.md  index.md
SCTaskRunnerMacOS/Other/Reference/ReferenceContent/Articles/: Installation.md
SCTaskRunnerMacOS/SCTaskRunnerMacOS/: SCTaskRunnerMacOSCore.py
SCTaskRunnerWindows/: MANIFEST.in  ReadMe.md  SCTaskRunnerWindows.codeunit.xml  pyproject.toml  requirements.txt
SCTaskRunnerWindows/Other/: .gitignore  CommonTasks.py  UpdateDependencies.py
SCTaskRunnerWindows/Other/QualityCheck/: Linting.py
SCTaskRunnerWindows/Other/Reference/ReferenceContent/: index.md
SCTaskRunnerWindows/Other/Reference/ReferenceContent/Articles/: Installation.md
SCTaskRunnerWindows/SCTaskRunnerWindows/: SCTaskRunnerWindowsCore.py
(+17 files in other folders)
