[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "sctaskrunnerwindows"
version = "1.0.0"
description = "SCTaskRunnerWindows provides an HTTP-server that builds operating-system-bound build-steps (e.g. flutter windows-builds) natively on a Windows-host on behalf of remote clients."
readme = { file = "ReadMe.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
    { name = "Marius Göcke", email = "marius.goecke@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]
dependencies = [
    "scriptcollection",
]

[project.scripts]
sctaskrunnerwindows = "SCTaskRunnerWindows.SCTaskRunnerWindowsCore:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["SCTaskRunnerWindows*"]
exclude = ["SCTaskRunnerWindowsTests*"]
